Structure and most styling completed

--- a/index.html
+++ b/index.html
@@ -1,11 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon">
-    <title>Body Mass Index Calculator</title>
-    <link rel="stylesheet" href="src/sass/main.scss">
-</head>
-<body></body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="/images/favicon-32x32.png" type="image/x-icon" />
+        <title>Body Mass Index Calculator</title>
+        <link rel="stylesheet" href="src/sass/main.scss" />
+    </head>
+    <body class="text-dark-electric-blue">
+        <header class="h-[640px] bg-gradient-to-tl from-skyblue to-transparent rounded-b-3xl">
+            <div class="container mx-auto mb-12 px-6 pt-8 space-y-6">
+                <div class="flex flex-col items-center">
+                    <img class="size-10" src="/images/logo.svg" alt="Logo" />
+                </div>
+                <div class="flex flex-col gap-6 items-center text-center">
+                    <h1 class="text-5xl font-semibold text-center text-gunmetal">Body Mass Index Calculator</h1>
+                    <p class="max-w-3xl">
+                        Better understand your weight in relation to your height using our body mass index (BM) calculator. While BMI is not the sole determinant of a healthy weight, it offers a
+                        valuable starting point to evaluate your overall health and well-being.
+                    </p>
+                </div>
+            </div>
+        </header>
+
+        <div class="mx-6 p-6 max-w-2xl -mt-48 md:-mt-72 space-y-6 bg-white rounded-xl">
+            <form action="#" method="post">
+                <h3>Enter your details below</h3>
+                <fieldset>
+                    <div>
+                        <input type="radio" name="units" id="units_metric" value="metric" />
+                        <label for="units_metric">Metric</label>
+                    </div>
+                    <div>
+                        <input type="radio" name="units" id="units_imperial" value="imperial" />
+                        <label for="units_imperial">Imperial</label>
+                    </div>
+                </fieldset>
+                <div>
+                    <label for="height">Height</label>
+                    <input type="text" name="height" id="height" />
+                </div>
+                <div>
+                    <label for="weight">Weight</label>
+                    <input type="text" name="weight" id="weight" />
+                </div>
+            </form>
+
+            <div class="p-8 bg-blue rounded-xl text-white">
+                <h2 class="text-4xl">23.4</h2>
+                <p>Your BMI suggests you’re a healthy weight. Your ideal weight is between 63.3kgs - 85.2kgs.</p>
+            </div>
+        </div>
+
+        <section class="mt-16">
+            <div class="max-w-6xl mx-auto flex flex-col gap-12 md:-ml-20 md:flex-row md:items-center lg:ml-auto">
+                <div>
+                    <img src="/images/image-man-eating.webp" alt="Image of man eating" />
+                </div>
+                <div class="container mx-auto px-6 space-y-8">
+                    <h2 class="text-3xl font-semibold text-gunmetal md:text-4xl">What your BMI result means</h2>
+                    <p>
+                        A BMI range of 18.5 to 24.9 is considered a 'healthy weight.' Maintaining a healthy weight may lower your chances of experiencing health issues later on, such as obesity and
+                        type 2 diabetes. Aim for a nutritious diet with reduced fat and sugar content, incorporating ample fruits and vegetables. Additionally, strive for regular physical activity,
+                        ideally about 30 minutes daily for five days a week.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="mt-16 bg-gradient-to-br from-transparent to-skyblue">
+            <div class="container max-w-6xl mx-auto py-14 px-6">
+                <div class="flex flex-col gap-10 lg:flex-row">
+                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+                        <div class="md:self-center lg:self-auto">
+                            <img src="/images/icon-eating.svg" alt="Bowl with food icon" />
+                        </div>
+                        <div class="space-y-6">
+                            <h3 class="text-2xl font-semibold text-gunmetal">Healthy eating</h3>
+                            <p>Healthy eating promotes weight control, disease prevention, better digestion, immunity, mental clarity, and mood.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+                        <div class="md:self-center lg:self-auto">
+                            <img src="/images/icon-exercise.svg" alt="Dumbell icon" />
+                        </div>
+                        <div class="space-y-6">
+                            <h3 class="text-2xl font-semibold text-gunmetal">Regular exercise</h3>
+                            <p>Exercise improves fitness, aids weight control, elevates mood, and reduces disease risk, fostering wellness and longevity.</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
+                        <div class="md:self-center lg:self-auto">
+                            <img src="/images/icon-sleep.svg" alt="Moon icon" />
+                        </div>
+                        <div class="space-y-6">
+                            <h3 class="text-2xl font-semibold text-gunmetal">Adequate sleep</h3>
+                            <p>Sleep enhances mental clarity, emotional stability, and physical wellness, promoting overall restoration and rejuvenation.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="my-16">
+            <div class="container max-w-6xl mx-auto px-6">
+                <div class="grid gap-4 justify-items-center md:grid-cols-2 md:gap-y-6 lg:grid-cols-12">
+                    <div class="mb-14 space-y-10 md:col-span-2 lg:col-span-6">
+                        <h2 class="text-3xl font-semibold text-center text-gunmetal md:text-4xl lg:text-left">Limitations of BMI</h2>
+                        <p class="max-w-sm text-center lg:text-left md:max-w-3xl">
+                            Although BMI is often a practical indicator of healthy weight, it is not suited for every person. Specific groups should carefully consider their BMI outcomes, and in
+                            certain cases, the measurement may not be beneficial to use.
+                        </p>
+                    </div>
+
+                    <!-- Cards -->
+                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-8">
+                        <div class="flex items-center gap-4">
+                            <img src="/images/icon-gender.svg" alt="Gender icon" />
+                            <h4 class="text-xl font-semibold text-gunmetal">Gender</h4>
+                        </div>
+                        <p>The development and body fat composition of girls and boys vary with age. Consequently, a child's age and gender are considered when evaluating their BMI.</p>
+                    </div>
+                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-5 lg:row-start-2">
+                        <div class="flex items-center gap-4">
+                            <img src="/images/icon-age.svg" alt="Birthday cake icon" />
+                            <h4 class="text-xl font-semibold text-gunmetal">Age</h4>
+                        </div>
+                        <p>In aging individuals, increased body fat and muscle loss may cause BMI to underestimate body fat content.</p>
+                    </div>
+                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-9 lg:row-start-2">
+                        <div class="flex items-center gap-4">
+                            <img src="/images/icon-muscle.svg" alt="Flexing biceps icon" />
+                            <h4 class="text-xl font-semibold text-gunmetal">Muscle</h4>
+                        </div>
+                        <p>BMI may misclassify muscular individuals as overweight or obese, as it doesn't differentiate muscle from fat.</p>
+                    </div>
+                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow lg:col-span-4 lg:col-start-3 lg:row-start-3">
+                        <div class="flex items-center gap-4">
+                            <img src="/images/icon-pregnancy.svg" alt="Baby icon" />
+                            <h4 class="text-xl font-semibold text-gunmetal">Pregnancy</h4>
+                        </div>
+                        <p>
+                            Expectant mothers experience weight gain due to their growing baby. Maintaining a healthy pre-pregnancy BMI is advisable to minimise health risks for both mother and child.
+                        </p>
+                    </div>
+                    <div class="max-w-sm p-6 space-y-4 bg-white rounded-xl shadow-2xl shadow-blue-shadow md:col-span-2 lg:col-span-4 lg:row-start-3">
+                        <div class="flex items-center gap-4">
+                            <img src="/images/icon-race.svg" alt="Generic human icon" />
+                            <h4 class="text-xl font-semibold text-gunmetal">Race</h4>
+                        </div>
+                        <p>
+                            Certain health concerns may affect individuals of some Black and Asian origins at lower BMIs than others. To learn more, it is advised to discuss this with your GP or
+                            practice nurse.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
