--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <body class="text-dark-electric-blue">
         <header class="max-w-7xl lg:mx-auto relative">
             <div class="absolute top-0 left-0 w-full max-w-[978px] h-[640px] lg:h-full bg-gradient-to-tl from-skyblue to-transparent rounded-b-3xl"></div>
-            <div class="max-w-6xl lg:min-h-[737px] mx-auto grid lg:grid-cols-12 gap-6 relative">
-                <div class="col-start-1 lg:col-end-13 row-start-1 mt-8 mx-6 lg:mt-0 flex flex-col items-center lg:items-start">
-                    <img class="size-10 lg:size-14" src="/images/logo.svg" alt="Logo" />
+            <div class="max-w-6xl lg:min-h-[737px] mx-auto relative">
+                <div class="pt-8 lg:pt-16 mx-6 lg:m-0 flex flex-col items-center lg:items-start">
+                    <img class="size-10 lg:size-16" src="/images/logo.svg" alt="Logo" />
                 </div>
-                <div class="row-start-2 row-end-3 col-start-1 lg:col-end-6 lg:row-start-2 lg:row-end-4 self-center mx-6 text-center lg:text-left flex flex-col gap-6 items-center">
+                <div class="max-w-[564px] mx-6 md:mx-auto lg:mx-0 lg:mt-32 text-center lg:text-left flex flex-col gap-6 items-center lg:justify-self-start">
                     <h1 class="text-5xl font-semibold text-gunmetal lg:text-6xl">Body Mass Index Calculator</h1>
                     <p>
                         Better understand your weight in relation to your height using our body mass index (BM) calculator. While BMI is not the sole determinant of a healthy weight, it offers a
@@ -23,7 +23,7 @@
                 </div>
 
                 <div
-                    class="row-start-4 row-end-5 col-start-1 lg:col-start-7 lg:col-end-13 lg:row-start-2 lg:row-end-3 mx-6 p-6 max-w-2xl sm:mx-auto space-y-6 bg-white rounded-xl shadow-2xl shadow-blue-shadow"
+                    class="lg:absolute lg:right-0 lg:top-1/2 lg:-translate-y-1/2 lg:translate-x-6 mt-6 mx-6 p-6 max-w-2xl lg:max-w-[564px] md:mx-auto space-y-6 bg-white rounded-xl shadow-2xl shadow-blue-shadow"
                 >
                     <form class="space-y-4 flex flex-col text-gunmetal" action="#" method="post" id="bmi_form">
                         <h3 class="text-2xl font-semibold tracking-tighter">Enter your details below</h3>
@@ -111,7 +111,7 @@
 
         <section class="mt-16">
             <div class="max-w-6xl mx-auto flex flex-col gap-12 md:-ml-20 md:flex-row md:items-center lg:ml-auto">
-                <div>
+                <div class="container mx-auto">
                     <img src="/images/image-man-eating.webp" alt="Image of man eating" />
                 </div>
                 <div class="container mx-auto px-6 flex flex-col items-start gap-8">
@@ -127,7 +127,7 @@
         </section>
 
         <section class="mx-auto max-w-[1392px] mt-16 bg-gradient-to-r from-transparent to-skyblue-soft rounded-3xl">
-            <div class="container max-w-6xl mx-auto py-14 px-6">
+            <div class="container mx-auto py-14 px-6">
                 <div class="flex flex-col gap-10 lg:flex-row">
                     <div class="flex flex-col gap-8 md:flex-row lg:flex-col">
                         <div class="md:self-center lg:self-auto">
